updated according to infra_monitor new version. Now fully working multi monitor PUSH system

--- a/config.ini
+++ b/config.ini
@@ -1,52 +1,57 @@
 [DEFAULT]
-api_key =
-api_base = push.statuscake.com
-api_url = ?PK=%(api_key)s&TestID=%%s&time=0
-http_mode = https
-conf_items = enabled name type data
-items_prefix = TEST_
-refresh_interval = 10
-
-[CONF_ITEMS_DEFAULTS]
 enabled = 0
 name =
 type =
 data =
+
+[SYSTEM]
+api_key = %%NO_api_key%%
+api_base = push.statuscake.com
+api_url = ?PK=%%s&TestID=%%s&time=0
+http_mode = https
+conf_items = enabled name type data
+items_prefix = TEST_
+refresh_interval = 59
 
 [TEST_1598085]
 enabled = 1
 name = Breeze main
 type = url
 data = https://breeze-fimm.fimm.fi/breeze
+api_key = b5b630212f13f74
 
-[CHECK_dsdsd]
-enabled = 0
+[TEST_1607372]
+enabled = 1
 name = DotMatics
 type = tcp
 data = 128.214.64.5 1521
+api_key = 4829c9bc1da685
 
 [TEST_1599563]
 enabled = 1
 name = Breeze dev
 type = url
 data = https://breeze-dev.fimm.fi/breeze/
-api_key =
+api_key = 2a0748c5d28615a
 
-[CHECK_tvqmtg2vt2fk]
-enabled = 0
+[TEST_1607373]
+enabled = 1
 name = RORA DB
 type = tcp
 data = 192.168.0.219 1521
+api_key = 5de7268850cb732
 
-[CHECK_8ywppzht6dvv]
-enabled = 0
+[TEST_1607374]
+enabled = 1
 name = Breeze pharma
 type = url
 data = https://breeze-ph.fimm.fi/breeze/
+api_key = e047071c3d228be
 
-[CHECK_ypkdj35tpnkz]
-enabled = 0
+[CHECK_1607376]
+enabled = 1
 name = CAS
 type = url
 data = https://cas-prot.fimm.fi/cas/login
+api_key = 9843f35b7dec6a1
 
