updated according to infra_monitor new version. Now fully working multi monitor PUSH system

--- a/config.ini
+++ b/config.ini
@@ -18,40 +18,40 @@ enabled = 1
 name = Breeze main
 type = url
 data = https://breeze-fimm.fimm.fi/breeze
-api_key = b5b630212f13f74
+api_key =
 
 [TEST_1607372]
 enabled = 1
 name = DotMatics
 type = tcp
 data = 128.214.64.5 1521
-api_key = 4829c9bc1da685
+api_key =
 
 [TEST_1599563]
 enabled = 1
 name = Breeze dev
 type = url
 data = https://breeze-dev.fimm.fi/breeze/
-api_key = 2a0748c5d28615a
+api_key =
 
 [TEST_1607373]
 enabled = 1
 name = RORA DB
 type = tcp
 data = 192.168.0.219 1521
-api_key = 5de7268850cb732
+api_key =
 
 [TEST_1607374]
 enabled = 1
 name = Breeze pharma
 type = url
 data = https://breeze-ph.fimm.fi/breeze/
-api_key = e047071c3d228be
+api_key =
 
 [CHECK_1607376]
 enabled = 1
 name = CAS
 type = url
 data = https://cas-prot.fimm.fi/cas/login
-api_key = 9843f35b7dec6a1
+api_key = 
 
