updated according to infra_monitor new version. Now fully working multi monitor PUSH system

--- a/config.ini
+++ b/config.ini
@@ -48,10 +48,10 @@ type = url
 data = https://breeze-ph.fimm.fi/breeze/
 api_key =
 
-[CHECK_1607376]
+[TEST_1607376]
 enabled = 1
 name = CAS
 type = url
 data = https://cas-prot.fimm.fi/cas/login
-api_key = 
+api_key =
 
